--- a/music.html
+++ b/music.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>test</title>
+      <title>Natsunori</title>
+      <link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/1a9262125d5271eef49f8ef54cac5609.png?size=4096"/>
+      <style>
+body {
+  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+  background-repeat: no-repeat;  
+  background-size: cover;
+}
+</style>
    </head>
-   <body>
-      <p>The music is running in the background.</p>
-      <p>(Song:s)</p>
-      <embed src="videoplayback.mp4" loop="true" autostart="true" width="2" height="0">
+   <body style="background-color:black;">
+   <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+	
+<embed src="videoplayback.mp4" loop="true" autostart="true" width="2" height="0">
    </body>
 </html>
