--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@ body {
 </style>
    </head>
    <body style="background-color:black;">
-   <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+   <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori music</span></h1>
 	
 <embed src="videoplayback.mp4" loop="true" autostart="true" width="2" height="0">
    </body>
