--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ body {
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	
 <button onclick="window.location.href='https://natsunori.github.io/media';">
-      media
+      Media
+    </button>
+<button onclick="window.location.href='https://natsunori.github.io/music';">
+      Music
     </button>
    </body>
 </html>
