--- a/music.html
+++ b/music.html
@@ -13,7 +13,7 @@ body {
    </head>
    <body style="background-color:black;">
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori</span></h1>
-	
+<p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 </span></p>
 <embed src="videoplayback.mp4" loop="true" autostart="true" width="2" height="0">
    </body>
 </html>
