--- a/media.html
+++ b/media.html
@@ -12,7 +12,10 @@ body {
 </style>
    </head>
    <body style="background-color:black;">
+   <button onclick="window.location.href='https://natsunori.github.io/media';">
+      Media
+    </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Media</span></h1>
-   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 </span></p>
+   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
    <div align="center"><iframe width="720" height="480" src="https://www.youtube.com/embed/k1BneeJTDcU?autoplay=1" frameborder="0"></iframe></div>
 </html>
