--- a/media.html
+++ b/media.html
@@ -12,8 +12,8 @@ body {
 </style>
    </head>
    <body style="background-color:black;">
-   <button onclick="window.location.href='https://natsunori.github.io/media';">
-      Media
+   <button onclick="window.location.href='https://natsunori.github.io';">
+      Home
     </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Media</span></h1>
    <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
