--- a/music.html
+++ b/music.html
@@ -12,6 +12,9 @@ body {
 </style>
    </head>
    <body style="background-color:black;">
+    <button onclick="window.location.href='https://natsunori.github.io';">
+      Home
+    </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori</span></h1>
 <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 </span></p>
 <embed src="videoplayback.mp4" loop="true" autostart="true" width="2" height="0">
