--- a/media.html
+++ b/media.html
@@ -17,5 +17,5 @@ body {
     </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Media</span></h1>
    <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
-   <div align="center"><iframe width="720" height="480" src="https://www.youtube.com/embed/k1BneeJTDcU?autoplay=1" frameborder="0"></iframe></div>
+   <div align="center"><button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button></div>
 </html>
