--- a/profiles.html
+++ b/profiles.html
@@ -15,7 +15,7 @@ body {
    <button onclick="window.location.href='https://natsunori.github.io';">
       Home
     </button>
-   <h1 style="text-align: center;"><span style="color: #ffffff;">Media</span></h1>
+   <h1 style="text-align: center;"><span style="color: #ffffff;">Profiles</span></h1>
    <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
    <div align="center"><button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button></div>
 </html>
