--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	
 <button onclick="window.location.href='https://natsunori.github.io/profiles';">
-      Media
+      Profiles
     </button>
 <button onclick="window.location.href='https://natsunori.github.io/music';">
       Music
