--- a/profiles.html
+++ b/profiles.html
@@ -17,10 +17,10 @@ body {
     </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Profiles</span></h1>
    <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
-   <div align="center"><button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button></div>
-   <div align="center"><button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button></div>
-   <div align="center"><button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button></div>
-   <div align="center"><button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button></div>
-   <div align="center"><button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button></div>
-   <div align="center"><button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button></div>
+   <div align="center"><button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button>
+   <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button>
+   <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
+   <button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button>
+   <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button>
+   <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button></div>
 </html>
