--- a/profiles.html
+++ b/profiles.html
@@ -16,7 +16,7 @@ body {
       Home
     </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Profiles</span></h1>
-   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 with button </span></p>
+   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
    <div align="center"><button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button>
    <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button>
    <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
