--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
    <body style="background-color:black;">
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	
-<div> align="center"><button onclick="window.location.href='https://natsunori.github.io/profiles';">
+<div align="center"><button onclick="window.location.href='https://natsunori.github.io/profiles';">
       Profiles
     </button>
 <button onclick="window.location.href='https://natsunori.github.io/music';">
