--- a/profiles.html
+++ b/profiles.html
@@ -22,5 +22,8 @@ body {
    <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
    <button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button>
    <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button>
-   <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button></div>
+   <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button>
+      <button onclick="window.location.href='https://github.com/natsunori';">Github</button>
+    </div>
+   
 </html>
