--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	
 <div align="center"><button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
-   <button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
+   <button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles lol</button>
    </div>
    </body>
 </html>
