--- a/music.html
+++ b/music.html
@@ -16,8 +16,8 @@ body {
       Home
     </button>
    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori</span></h1>
-<p style="text-align: center;"><span style="color: #ffffff;">test build 2A1 </span></p>
-    <p style="text-align: center;"><span style="color: #ffffff;">currently playing therapy</span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">test build 2A2 </span></p>
+    <p style="text-align: center;"><span style="color: #ffffff;">currently playing Shiawase no Monosashi</span></p>
 <embed src="videoplayback.mp4" loop="true" autostart="true" width="0" height="0">
    </body>
 </html>
