--- a/profiles.html
+++ b/profiles.html
@@ -25,5 +25,6 @@ body {
    <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button>
    <button onclick="window.location.href='https://github.com/natsunori';">Github</button>
     </div>
+      <iframe src="https://discord.com/widget?id=935860010163003443&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
    
 </html>
