--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 	
 <div align="center"><button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
    <button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
-	a href="https://natsunori.github.io/profiles" class="btn btn-white">profiles</a>
+	<a href="https://natsunori.github.io/profiles" class="btn btn-white">profiles</a>
    </div>
    </body>
 </html>
