--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Natsunori</title>
-      <link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
-      <style>
-body {
-  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
-  background-repeat: no-repeat;  
-  background-size: cover;
-}
-</style>
-   </head>
-   <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
-	
-<div align="center"><button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
-   <button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
-	<a href="https://natsunori.github.io/profiles" class="btn btn-white">profiles</a>
-   </div>
-   </body>
+<head>
+	<title>Natsunori</title>
+	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
+	<style>
+		body {
+		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+		    background-repeat: no-repeat;  
+		    background-size: cover;
+		}
+	</style>
+</head>
+<body>
+	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+	<div align="center">
+		<button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
+		<button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
+	</div>
+</body>
 </html>
-
