--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div align="center">
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
-		<button onclick="window.location.href='https://natsunori.github.io/priddawoman';">Pridda woman</button>
+		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';">Pridda woman</button>
 	</div>
 </body>
 </html>
