--- a/Priddawoman.html
+++ b/Priddawoman.html
@@ -13,14 +13,18 @@ body {
    </head>
    <body style="background-color:black;">
       <button onclick="window.location.href='https://natsunori.github.io';">Home</button>
- <div class="iframe-thing">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vStPdXFdC2FO-6G6_XYk4s5KUD0CBBzkvf4_wCZov_mGtu8xRQyj_CqNBA5SfGkDqp9BPU0CzNc28zk/embed?start=false&loop=false&delayms=3000" frameborder="0" width= 80% height= 100% allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
-<style>
-    .iframe-thing {
-        text-align:center;
-        width:100%;
-        height:100%;
-    }
+ <style>
+#wrap { width: 600px; height: 390px; padding: 0; overflow: hidden; }
+#frame { width: 800px; height: 520px; border: 1px solid black; }
+#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; }
 </style>
+
+...
+
+<p>Some text before the frame</p>
+<div id="wrap">
+<iframe id="frame" src="https://docs.google.com/presentation/d/e/2PACX-1vStPdXFdC2FO-6G6_XYk4s5KUD0CBBzkvf4_wCZov_mGtu8xRQyj_CqNBA5SfGkDqp9BPU0CzNc28zk/pub?start=false&loop=false&delayms=3000"></iframe>
+</div>
+<p>Some text after the frame</p>
+</body>
 </html>
