alba tally table patch

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';">Pridda woman</button>
+		<button onclick="window.location.href='https://natsunori.com/tally-table';">Alba's tally table</button>
 	</div>
 </body>
 </html>
