--- a/tally-table.html
+++ b/tally-table.html
@@ -12,6 +12,7 @@
 	</style>
 </head>
 <body>
+	<button onclick="window.location.href='https://natsunori.github.io';">Home</button>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Alba and ted's tally sheet</span></h1>
 	<div align="center">
