--- a/hotf.html
+++ b/hotf.html
@@ -12,9 +12,13 @@
 	</style>
 </head>
 <body>
-	<h1 style="text-align: center;"><span style="color: #ffffff;">House of the future</span></h1>
+	<h1 style="text-align: center;"><span style="color: #000000;">House of the future</span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';">Energy</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';">Earth ship</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';">Hygine</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';">Kitchen garden</button>
 	</div>
+	<p1 style="text-align: center;"><span style="color: #000000;">Welcome to house of th future please look around at the other pages</span></span>
 </body>
 </html>
