--- a/hotf.html
+++ b/hotf.html
@@ -18,7 +18,8 @@
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Earth ship</button>
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Hygine</button>
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Kitchen garden</button>
+		<br></br>
+	<p1><span style="color: #000000;">poggers</span></p1>
 	</div>
-	<p1 style="text-align: center;"><span style="color: #000000;">Welcome to house of th future please look around at the other pages</span></span>
 </body>
 </html>
