--- a/hotf.html
+++ b/hotf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Natsunori</title>
+	<title>House of the future</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
 	<style>
 		body {
@@ -19,7 +19,7 @@
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Hygine</button>
 		<button onclick="window.location.href='https://natsunori.github.io/music';">Kitchen garden</button>
 		<br></br>
-	<p1><span style="color: #000000;">poggers</span></p1>
+		<p1><span style="color: #000000;">Sustainable living for the future</span></p1>
 	</div>
 </body>
 </html>
