--- a/hotf.html
+++ b/hotf.html
@@ -14,10 +14,10 @@
 <body>
 	<h1 style="text-align: center;"><span style="color: #000000;">House of the future</span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Energy</button>
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Earth ship</button>
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Hygine</button>
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Kitchen garden</button>
+		<button onclick="window.location.href='';">Energy</button>
+		<button onclick="window.location.href='';">Earth ship</button>
+		<button onclick="window.location.href='';">Hygine</button>
+		<button onclick="window.location.href='';">Kitchen garden</button>
 		<br></br>
 		<p1><span style="color: #000000;">Sustainable living for the future</span></p1>
 	</div>
