--- a/earthship.html
+++ b/earthship.html
@@ -12,7 +12,7 @@
 	</style>
 </head>
 <body>
-	<h1 style="text-align: center;"><span style="color: #000000;">Earth house</span></h1>
+	<h1 style="text-align: center;"><span style="color: #000000;">Earth ship</span></h1>
 	<div align="center">
 		<img src="https://i.pinimg.com/originals/d9/f1/6e/d9f16eff306773e789fa723a00266893.jpg">
     <p>lorem ipsum</p>
