--- a/hotf.html
+++ b/hotf.html
@@ -15,7 +15,7 @@
 	<h1 style="text-align: center;"><span style="color: #000000;">House of the future</span></h1>
 	<div align="center">
 		<button onclick="window.location.href='';">Energy</button>
-		<button onclick="window.location.href='';">Earth ship</button>
+		<button onclick="window.location.href='https://natsunori.com/earthship';">Earth ship</button>
 		<button onclick="window.location.href='';">Hygine</button>
 		<button onclick="window.location.href='';">Kitchen garden</button>
 		<br></br>
