--- a/earthship.html
+++ b/earthship.html
@@ -14,7 +14,7 @@
 <body>
 	<button onclick="window.location.href='www.natusnori.com/hotf';">Home</button>
 	<h1 style="text-align: center;"><span style="color: #000000;">Earth ship</span></h1>
-	<div align="center">
+	<div align="center", {background-color: white;}>
 		<img src="https://i.pinimg.com/originals/d9/f1/6e/d9f16eff306773e789fa723a00266893.jpg">
     <p>lorem ipsum</p>
 	</div>
