--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Natsunori</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
+	<link
+     		 rel="stylesheet"
+     		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    	/>
 	<style>
 		body {
 		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
@@ -14,7 +18,7 @@
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';">Music</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';">Pridda woman</button>
 	</div>
