--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
 	<style>
-		body {
+		body, html {
+			height: 100%
+		}
+		
+		.bg {
 		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
 		    background-repeat: no-repeat;  
 		    background-size: cover;
@@ -19,8 +23,8 @@
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	<div align="center">
 		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
-		<button onclick="window.location.href='https://natsunori.github.io/profiles';">Profiles</button>
-		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';">Pridda woman</button>
+		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
+		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 	</div>
 </body>
 </html>
