--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
 	<style>
-		body
+		body {
 		
 		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
 		    background-repeat: no-repeat;  
