--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     	/>
 	
 </head>
-<body>
-<style>
+<body <style>
 		body {
 			height: 100;
 		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
@@ -18,6 +17,8 @@
 		    background-size: cover;
 		}
 	</style>
+>
+
 
 
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
