--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
-	
-</head>
-<body <style>
+	<style>
 		body {
 			height: 100;
 		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
@@ -17,7 +15,8 @@
 		    background-size: cover;
 		}
 	</style>
->
+</head>
+<body>
 
 
 
