--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 	</div>
+	<img src="20221011062323_IMG_7327.jpg" alt="Trulli" width="500" height="333">
 </body>
 </html>
