--- a/index.html
+++ b/index.html
@@ -27,5 +27,14 @@
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 	</div>
 	<img src="20221011062323_IMG_7327.jpg" alt="Trulli" width="500" height="333">
+	
+	<style>
+		body {
+			height: 100;
+		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+		    background-repeat: no-repeat;  
+		    background-size: cover;
+		}
+	</style>
 </body>
 </html>
