--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
+	
 	<style>
-		body {
-			height: 100;
-		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
-		    background-repeat: no-repeat;  
-		    background-size: cover;
-		}
-	</style>
+body {
+  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
 </head>
 <body>
 
@@ -27,14 +28,5 @@
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 	</div>
 	<img src="20221011062323_IMG_7327.jpg" alt="Trulli" width="500" height="333">
-	
-	<style>
-		body {
-			height: 100;
-		    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
-		    background-repeat: no-repeat;  
-		    background-size: cover;
-		}
-	</style>
 </body>
 </html>
