--- a/index.html
+++ b/index.html
@@ -3,30 +3,23 @@
 <head>
 	<title>Natsunori</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
-	<link
-     		 rel="stylesheet"
-     		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
-    	/>
-	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
-body {
-  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
-}
-</style>
+		body {
+		  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+		  background-repeat: no-repeat;
+		  background-attachment: fixed;  
+		  background-size: cover;
+		}
+	</style>
 </head>
 <body>
-
-
-
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
 	<div align="center">
 		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 	</div>
-	<img src="20221011062323_IMG_7327.jpg" alt="Trulli" width="500" height="333">
 </body>
 </html>
