--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
-		  background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
-		  background-repeat: no-repeat;
-		  background-attachment: fixed;  
-		  background-size: cover;
+			background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+			background-repeat: no-repeat;
+			background-attachment: fixed;  
+			background-size: cover;
+			width: 100%;
+			height: 100vh;
 		}
 	</style>
 </head>
