--- a/profiles.html
+++ b/profiles.html
@@ -16,19 +16,20 @@ body {
 </style>
    </head>
    <body style="background-color:black;">
-   <button onclick="window.location.href='https://natsunori.github.io';">
+<button onclick="window.location.href='https://natsunori.github.io';">
       Home
-    </button>
-   <h1 style="text-align: center;"><span style="color: #ffffff;">Profiles</span></h1>
-   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
-   <div align="center"><button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button>
-   <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button>
-   <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
-   <button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button>
-   <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button>
-   <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button>
-   <button onclick="window.location.href='https://github.com/natsunori';">Github</button>
-    </div>
-      <iframe src="https://discord.com/widget?id=935860010163003443&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-   
+</button>
+   <h1 style="text-align: center;">   
+	<span style="color: #ffffff;">Profiles</span></h1>
+	   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
+	   
+<div align="center">
+		   <button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button>
+		   <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button>
+		   <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
+		   <button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button>
+		   <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button>
+		   <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button>
+		   <button onclick="window.location.href='https://github.com/natsunori';">Github</button>
+</div>
 </html>
