--- a/tally-table.html
+++ b/tally-table.html
@@ -1,11 +1,7 @@
-<?php
-	$settings = require_once "/./settings.php";
-	if (issset($settings)) die();
-?>
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><?php echo $settings["tallytableTitle"]; ?></title>
+		<title>Natsunori</title>
 		<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/./style.css"/>
