--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/./style.css"/>
+	<link
+     		 rel="stylesheet"
+     		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    	/>
 </head>
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
