--- a/profiles.html
+++ b/profiles.html
@@ -14,13 +14,13 @@
       <span style="color: #ffffff;">Profiles</span></h1>
 	   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
       <div align="center">
-               <button onclick="window.location.href='https://osu.ppy.sh/users/22650901';">Osu!</button>
-               <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';">discord</button>
-               <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';">Steam</button>
-               <button onclick="window.location.href='https://github.com/natsunori/silica-v2';">Silica</button>
-               <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';">Spotify</button>
-               <button onclick="window.location.href='https://www.twitch.tv/natsunorir';">Twitch</button>
-               <button onclick="window.location.href='https://github.com/natsunori';">Github</button>
+               <button onclick="window.location.href='https://osu.ppy.sh/users/22650901';" class = "button is-primary" >Osu!</button>
+               <button onclick="window.location.href='https://discordapp.com/users/630481836665208835/';" class = "button is-primary">discord</button>
+               <button onclick="window.location.href='https://steamcommunity.com/id/natsunori/';" class = "button is-primary" >Steam</button>
+               <button onclick="window.location.href='https://github.com/natsunori/silica-v2';" class = "button is-primary" >Silica</button>
+               <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';" class = "button is-primary" >Spotify</button>
+               <button onclick="window.location.href='https://www.twitch.tv/natsunorir';" class = "button is-primary" >Twitch</button>
+               <button onclick="window.location.href='https://github.com/natsunori';" class = "button is-primary" >Github</button>
       </div>
    </body>
 </html>
