--- a/profiles.html
+++ b/profiles.html
@@ -13,7 +13,7 @@
 	   
    </head>
    <body style="background-color:black;">
-      <button onclick="window.location.href='https://natsunori.github.io';">
+      <button onclick="window.location.href='https://natsunori.github.io';" class = "button-is-primary" >
             Home
       </button>
       <h1 style="text-align: center;">   
