--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
-		<button onclick+"window.location.href='https://natsunori.github.io/jack-is-a-cunt';" class = "button is-primary" >jacks a cunt</button>
+		<button onclick="window.location.href='https://natsunori.github.io/jack-is-a-cunt';" class = "button is-primary" >jacks a cunt</button>
 	</div>
 </body>
 </html>
