--- a/jack-is-a-cunt.html
+++ b/jack-is-a-cunt.html
@@ -9,6 +9,9 @@
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
+	<button onclick="window.location.href='https://natsunori.github.io';" class = "button-is-primary" >
+            Home
+      </button>
 </head>
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Jack is a massive cunt</span></h1>
