--- a/jack-is-a-cunt.html
+++ b/jack-is-a-cunt.html
@@ -15,6 +15,6 @@
 </head>
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">Jack is a massive cunt</span></h1>
-	<p style="text-align: center;"><span stytle="color: #ffffff;">jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  </span></p>
+	<p style="text-align: center;"><span style="color: #ffffff;">jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  jack gets no pus.  </span></p>
 </body>
 </html>
