--- a/profiles.html
+++ b/profiles.html
@@ -27,6 +27,7 @@
                <button onclick="window.location.href='https://open.spotify.com/user/wasdpo6';" class = "button is-primary" >Spotify</button>
                <button onclick="window.location.href='https://www.twitch.tv/natsunorir';" class = "button is-primary" >Twitch</button>
                <button onclick="window.location.href='https://github.com/natsunori';" class = "button is-primary" >Github</button>
+	      <button onclick="window.location.href='https://myanimelist.net/profile/Natsunori';" class = "button is-primary" >MAL</button>
       </div>
    </body>
 </html>
