--- a/specs.html
+++ b/specs.html
@@ -18,15 +18,18 @@
       </button>
       <h1 style="text-align: center;">   
       <span style="color: #ffffff;">Profiles</span></h1>
-	   <p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
-      <div align="center">
-              <p> Ryzen 5 5500 <br>
-Corsair vengence rgb pro 16gb<br>
-Corsair rm 850x<br>
-Be quiet bk007 <br>
-Msi RTX 2080 Ti <br>
-Msi b450 tomahawk pro <br>
-
+	<p style="text-align: center;"><span style="color: #ffffff;">test build 2A1</span></p>
+      
+	   <div align="center">
+              <p><span style="color: #ffffff;"> 	
+		        Ryzen 5 5500 <br>
+			Corsair vengence rgb pro 16gb<br>
+			Corsair rm 850x<br>
+			Be quiet bk007 <br>
+			Msi RTX 2080 Ti <br>
+			Msi b450 tomahawk pro <br>
+<\span>
+<\p>
 
 
       </div>
