--- a/specs.html
+++ b/specs.html
@@ -27,9 +27,8 @@
 			Corsair rm 850x<br>
 			Be quiet bk007 <br>
 			Msi RTX 2080 Ti <br>
-			Msi b450 tomahawk pro <br>
-						<\span>
-						<\p>
+		      Msi b450 tomahawk pro <br> </span><</p>
+						
 
 
       </div>
