--- a/specs.html
+++ b/specs.html
@@ -22,12 +22,16 @@
       
 	   <div align="center">
               <p><span style="color: #ffffff;"> 	
-		        Ryzen 5 5500 <br>
-			Corsair vengence rgb pro 16gb<br>
-			Corsair rm 850x<br>
-			Be quiet bk007 <br>
-			Msi RTX 2080 Ti <br>
-		      Msi b450 tomahawk pro <br> </span><</p>
+		        CPU: AMD Ryzen 5 5500<br>
+		 	GPU: Nvidia RTX 2080-Ti<br>
+			SSD: Kingston SNVS500G 500GB <br>
+			HDD: Seagate Barracuda 7200.14 1TB <br>
+			HDD: Toshiba E300 2TB <br>
+			HDD: Seagate Momentus 5400.6 2.5" 500GB<br>
+			HDD: Seagate Barracuda 1TB (2016)<br>
+			RAM: Corsair Vengeance RGB PRO DDR4 3200 C16 2x8GB<br>
+			MBD: MSI B450 TOMAHAWK MAX (MS-7C02)
+ </span><</p>
 						
 
 
