--- a/cwsubdir/cwindex.html
+++ b/cwsubdir/cwindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Natsunori</title>
+	<title>Test build 3B</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/style.css"/>
@@ -11,9 +11,9 @@
     	/>
 </head>
 <body>
-	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+	<h1 style="text-align: center;"><span style="color: #ffffff;">test build </span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >tst</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
