--- a/cwsubdir/cwindex.html
+++ b/cwsubdir/cwindex.html
@@ -4,7 +4,7 @@
 	<title>Test build 3B</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/style.css"/>
+	<link rel="stylesheet" href="style.css"/>
 	<link
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
