--- a/cwsubdir/cwindex.html
+++ b/cwsubdir/cwindex.html
@@ -13,10 +13,9 @@
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">test build </span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >tst</button>
-		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
-		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
-		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
+		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/unit4';" class = "button is-primary" >Unit 4</button>
+		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/unit19';" class = "button is-primary" >Unit 19</button>
+		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/unit21';" class = "button is-primary" >Unit 21</button>
 	</div>
 </body>
 </html>
