--- a/cwsubdir/unit19.html
+++ b/cwsubdir/unit19.html
@@ -13,8 +13,8 @@
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">test build </span></h1>
 	<div align="center">
-		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >.Docx download</button>
-		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >PDF download</button>
+		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/storage/chris-storage.docx';" class = "button is-primary" >.Docx download</button>
+		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/storage/chris-storage.pdf';" class = "button is-primary" >PDF download</button>
 	</div>
 </body>
 </html>
