--- a/cwsubdir/unit19.html
+++ b/cwsubdir/unit19.html
@@ -13,13 +13,9 @@
 <body>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">test build </span></h1>
 	<div align="center">
-		<a href="chris-storage.docx" download="GFG">
-         	<button type="button">Download</button>
-         	</a>
-		
-		   
+	
 		<button onclick="window.location.href='chris-storage.docx';" class = "button is-primary" >.Docx download</button>
-		<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/storage/chris-storage.pdf';" class = "button is-primary" >PDF download</button>
+		<button onclick="window.location.href='chris-storage.pdf';" class = "button is-primary" >PDF download</button>
 	</div>
 </body>
 </html>
