--- a/cwsubdir/unit19.html
+++ b/cwsubdir/unit19.html
@@ -11,10 +11,9 @@
     	/>
 </head>
 <body>
+	<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/cwindex';" class = "button-is-primary" >Home</button>
 	<h1 style="text-align: center;"><span style="color: #ffffff;">test build </span></h1>
-	<button onclick="window.location.href='https://natsunori.github.io/cwsubdir/cwindex';" class = "button-is-primary" >
-            Home
-      	</button>
+	
 	<div align="center">
 	
 		<button onclick="window.location.href='chris-storage.docx';" class = "button is-primary" >.Docx download</button>
