--- a/test-3d-map-main/index.html
+++ b/test-3d-map-main/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+ <!-- This project belongs entirly to bemuse01 please check out his git--> 
+ <!-- https://github.com/bemuse01 -->
+
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
