--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/Priddawoman';" class = "button is-primary" >Pridda woman</button>
 		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
+		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-secondary" >Music</button>
 	</div>
 </body>
 </html>
