--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
+	<meta charset="UTF-8">
+ 	<meta name="description" content="Free Web tutorials">
+ 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  	<meta name="author" content="A portfolio for all of my work including links to all social platforms and game profiles">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<title>Natsunori</title>
-	<link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" type="image/svg+xml" href="file:///C:/Users/Natsunori/Downloads/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg"/>
 	<link rel="stylesheet" href="/./style.css"/>
 	<link
      		 rel="stylesheet"
