--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	
 	<meta charset="UTF-8">
- 	<meta name="description" content="Free Web tutorials">
- 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-  	<meta name="author" content="A portfolio for all of my work including links to all social platforms and game profiles">
+ 	<meta name="description" content="A portfolio for all of my work including links to all social platforms and game profiles">
+ 	<meta name="keywords" content="Natsunori,Coding,github,games">
+  	<meta name="author" content="Natsunori">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>Natsunori</title>
