--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<title>Natsunori</title>
-	<link rel="shortcut icon" type="image/svg+xml" href="file:///C:/Users/Natsunori/Downloads/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg"/>
+	<link rel="shortcut icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/05/36/78/84/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg"/>
 	<link rel="stylesheet" href="/./style.css"/>
 	<link
      		 rel="stylesheet"
