--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
 		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
 	</div>
+	
+
+	<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
 </body>
 </html>
