--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
 	</div>
 	
+	<div align="center">
+		<br>
+		<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
 
-	<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
+	</div>
 </body>
 </html>
