--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ p { margin: auto; text-align: center; max-width: 1100px; font-size: 20px; font-w
 </style>
 </head>
 <body>
-<p><img border="0" src="https://imgur.com/a/yEMRHx2.png" style="display: block; margin-left: auto; margin-right: auto;" /><br /></p>
+<p><img border="0" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_jBsXaPwnIZL2suC5bkse88h6D__cTl3ft0yY2557Hh38TWqzTwAPznT7_pf27EjMX0E&usqp=CAU" style="display: block; margin-left: auto; margin-right: auto;" /><br /></p>
 <p>This domain name has been seized by Homeland Security Investigations (HSI) pursuant to a warrant issued  by the United States District Court for the District of Maryland under the authority of, inter alia, Title 18, United States Code, Section 2323.<br /></p>
 <p>It is unlawful to reproduce or distribute copyrighted material including movies, music, software, or games without authorization.<br /></p>
 <p>Individuals who do so risk criminal prosecution under Title 18, United states code, Section 2319. First time offenders convicted of a criminal felony copyright violation face up to five years in prison, fines, restitution, and forfeiture.</p>
