--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Domain Seized by Law Enforcement</title>
-<style>
-body { background-color: #303030; }
-p { margin: auto; text-align: center; max-width: 1100px; font-size: 20px; font-weight: bold; color: #ffffff; margin-bottom: 20px; }
-</style>
+
+    <meta charset="UTF-8">
+     <meta name="description" content="A portfolio for all of my work including links to all social platforms and game profiles">
+     <meta name="keywords" content="Natsunori,Coding,github,games">
+      <meta name="author" content="Natsunori">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Natsunori</title>
+    <link rel="shortcut icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/05/36/78/84/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg%22/%3E
+    <link rel="stylesheet" href="/./style.css"/>
+    <link
+              rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+        />
 </head>
 <body>
-<p><img border="0" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_jBsXaPwnIZL2suC5bkse88h6D__cTl3ft0yY2557Hh38TWqzTwAPznT7_pf27EjMX0E&usqp=CAU" style="display: block; margin-left: auto; margin-right: auto;" /><br /></p>
-<p>This domain name has been seized by Homeland Security Investigations (HSI) pursuant to a warrant issued  by the United States District Court for the District of Maryland under the authority of, inter alia, Title 18, United States Code, Section 2323.<br /></p>
-<p>It is unlawful to reproduce or distribute copyrighted material including movies, music, software, or games without authorization.<br /></p>
-<p>Individuals who do so risk criminal prosecution under Title 18, United states code, Section 2319. First time offenders convicted of a criminal felony copyright violation face up to five years in prison, fines, restitution, and forfeiture.</p>
+    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+    <div align="center">
+        <button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
+        <button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
+        <button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
+        <button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
+    </div>
+
+    <div align="center">
+        <br>
+        <img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small%22%3E
+
+    </div>
 </body>
-</html> 
+</html>
