--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <meta charset="UTF-8">
-     <meta name="description" content="A portfolio for all of my work including links to all social platforms and game profiles">
-     <meta name="keywords" content="Natsunori,Coding,github,games">
-      <meta name="author" content="Natsunori">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Natsunori</title>
-    <link rel="shortcut icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/05/36/78/84/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg%22/%3E
-    <link rel="stylesheet" href="/./style.css"/>
-    <link
-              rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
-        />
+	
+	<meta charset="UTF-8">
+ 	<meta name="description" content="A portfolio for all of my work including links to all social platforms and game profiles">
+ 	<meta name="keywords" content="Natsunori,Coding,github,games">
+  	<meta name="author" content="Natsunori">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<title>Natsunori</title>
+	<link rel="shortcut icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/05/36/78/84/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg"/>
+	<link rel="stylesheet" href="/./style.css"/>
+	<link
+     		 rel="stylesheet"
+     		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    	/>
 </head>
 <body>
-    <h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
-    <div align="center">
-        <button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
-        <button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
-        <button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
-        <button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
-    </div>
+	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+	<div align="center">
+		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
+		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
+		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-primary" >Pc specs</button>
+		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
+	</div>
+	
+	<div align="center">
+		<br>
+		<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
 
-    <div align="center">
-        <br>
-        <img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small%22%3E
-
-    </div>
+	</div>
 </body>
 </html>
