--- a/tally-table.html
+++ b/tally-table.html
@@ -9,20 +9,8 @@
 	<body>
 		<button onclick="window.location.href='https://natsunori.github.io';">Home</button>
 		<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
-		<h1 style="text-align: center;"><span style="color: #ffffff;">Alba and ted's tally sheet</span></h1>
+		<h1 style="text-align: center;"><span style="color: #ffffff;">Tally sheet schedule to be removed</span></h1>
 		<div align="center">
-			<table border = "1" bordercolor = "black" bgcolor = "white">
-				<tr>
-				<td>Thanks for sharing</td>
-				<td>cool cool</td>
-				<td>Broken english</td>
-				</tr>
-				<tr>
-				<td>11</td>
-				<td>4</td>
-				<td>3</td>
-				</tr>
-			</table>
 		</div>
 	</body>
 </html>
