--- a/ncc/ncindex.html
+++ b/ncc/ncindex.html
@@ -10,7 +10,7 @@
 	
 	<title>Natsunori</title>
 	<link rel="shortcut icon" type="image/svg+xml" href="https://t3.ftcdn.net/jpg/05/36/78/84/360_F_536788448_UcOZv30qCQY36To1ygsjmFmVUaeuc7kf.jpg"/>
-	<link rel="stylesheet" href="/./style.css"/>
+	<link rel="stylesheet" href="./style.css"/>
 	<link
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
