--- a/ncc/ncindex.html
+++ b/ncc/ncindex.html
@@ -17,8 +17,8 @@
     	/>
 </head>
 <body>
-	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori </span></h1>
+	<h1 style="text-align: center;"><span style="color: #ffffff;">Newport Car Club</span></h1>
 	
 	
 </body>
-</html>
+</html>	
