--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     	/>
 </head>
 <body>
-	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori tnsy</span></h1>
+	<h1 style="text-align: center;"><span style="color: #ffffff;">Natsunori</span></h1>
 	<div align="center">
 		<button onclick="window.location.href='https://natsunori.github.io/music';" class = "button is-primary" >Music</button>
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
