--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 		<button onclick="window.location.href='https://natsunori.github.io/profiles';" class = "button is-primary" >Profiles</button>
 		<button onclick="window.location.href='https://natsunori.github.io/specs';" class = "button is-secondary" >Pc specs</button>
 		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >3d map demo</button>
-		<button class="button-63" role="button">Button 63</button>
 	</div>
 	
 	<div align="center">
 		<br>
 		<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
+		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >Big Friendly Button \n </button>
 
 	</div>
 </body>
