--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 	<div align="center">
 		<br>
 		<img src="https://pbs.twimg.com/media/FbFU_L2XoAAdW94?format=jpg&name=small">
-		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >Big Friendly Button \n </button>
-
+	</div>
+	<div align="center">
+		<br>
+		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >=================================Big Friendly Button=================================</button>
 	</div>
 </body>
 </html>
