--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>
 	<div align="center">
 		<br>
-		<button onclick="window.location.href='https://natsunori.com/test-3d-map-main/index.html';" class = "button is-secondary" >=================================Big Friendly Button=================================</button>
+		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big Friendly Button=================================</button>
 	</div>
 </body>
 </html>
