--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div align="center">
 		<br>
 		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big Friendly Button=================================</button>
-		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big BIG Friendly Button================================= \n \n \n</button>
+		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big BIG Friendly Button================================= <br> <br> <br> <br> <br> <br> </button>
 	</div>
 	</div>
 </body>
